replaced sun.misc.Base64 with java.util.Base64